--- a/001.md
+++ b/001.md
@@ -5588,6 +5588,16 @@ div {
 
 - **7.浮动后的元素顶部绝对不会搞过浮动前.**  换句话说, 浮动是分先后的
 
+  ```
+  <div class="container">
+    <div class="box1">box1</div>
+    <div class="box2">box2</div>
+    <div class="box3">box3</div>
+  </div>
+  ```
+
+  
+
   ![Snip20191126_15](Snip20191126_15.png) 
 
 
@@ -5601,3 +5611,684 @@ div {
 5. 浮动的元素不能超出包含块的左右
 6. 后浮动的元素顶部不能超过先浮动的元素
 7. 元素左浮动/ 右浮动, 浮动后的元素顶部绝对不会搞过浮动前.
+
+
+
+
+
+## 5. 浮动的应用场景
+
+
+
+1. 我们都知道,在书写行内级和inline-block元素时, 如果标签之间有空格和换行时, 元素在浏览器上显示时元素的左右两边就会出现间隙, 而且这个间隙通常不好解决, 因为他会随着字体的大小变化, 其实我们的浮动的一个主要应用场景就是解决行内级和inline-block元素水平间隙的问题.
+
+
+
+
+
+
+
+
+
+
+
+## 6. 浮动存在的问题
+
+1. 由于浮动元素脱离了标准流, 变成了脱标元素, 所以浮动元素不在向父元素汇报高度.
+
+   > 什么是汇报高度?  
+   >
+   > 父元素没有设置高度的情况下, 高度是由内容或者子元素的高度撑起来的, 这种现象我们成为子元素向父元素汇报高度
+
+   ![Snip20191126_16](Snip20191126_16.png) 
+
+   ```
+   <style>
+   	// 父元素没有高度, 父元素的高度由子元素的高度或内容撑起来
+     .container{
+       border: 1px solid #000;
+       width: 100px;
+       margin-left: 20px;
+       float: left;
+     } 
+     .box1 {
+       width: 50px;
+       height: 50px;
+       background-color: #ff0000;
+     } 
+     .box2 {
+       width: 50px;
+       height: 50px;
+       background-color: #00ff00;
+     } 
+   </style>
+   ```
+
+   ```
+   <div class="container">
+     <div class="box1"></div>
+     <div class="box2"></div>
+   </div>
+   
+   <div class="container">
+     内容撑起父元素的高度
+   </div>
+   ```
+
+   
+
+2. 浮动元素会导致父元素高度坍塌的问题
+
+   > 什么是父元素高度坍塌? 
+   >
+   > 父元素高度坍塌指的是, 子元素浮动后不在向父元素汇报高度, 父元素的高度为0, 导致父元素同级的子元素布局异常的问题
+
+   
+
+   ![Snip20191126_17](Snip20191126_17.png) 
+
+   ```
+   <style>
+     .container{
+       border: 1px solid #000;
+       margin-left: 20px;
+     } 
+     .box1 {
+       width: 50px;
+       height: 50px;
+       background-color: #ff0000;
+       float: left;
+     } 
+     .box2 {
+       width: 50px;
+       height: 50px;
+       background-color: #00ff00;
+       float: right;
+     } 
+   </style>
+   ```
+
+   ```
+   <body>
+     <div class="container">
+     <div class="box1"></div>
+     <div class="box2"></div>
+     </div> 
+     父元素不设置高度,子元素浮动后撑不起父元素, 父元素高度坍塌
+   </body>
+   ```
+
+   
+
+    
+
+3. 解决父元素高度坍塌的问题的过程, 一般叫做清除浮动 (清理浮动)
+
+
+
+
+
+
+
+## 7. 常见清除浮动的方法(一) 不推荐
+
+
+
+### 1.给父元素设置固定高度
+
+> 扩展性不好,不推荐 (因为父元素的高度是动态变化不确定的)
+
+
+
+### 2. 给父元素设置浮动, 以浮制浮
+
+> 父元素脱离了标准流
+>
+> 改变了盒子特性不推荐
+
+```
+<style> 
+  .container{
+    border: 1px solid #000;
+    margin-left: 20px;
+    width: 200px;
+    margin-top: 30px; 
+  } 
+  .parent {
+    float: left;
+  } 
+  .box1 {
+    width: 50px;
+    height: 50px;
+    background-color: #ff0000;
+    float: left;
+  } 
+  .box2 {
+    width: 50px;
+    height: 50px;
+    background-color: #00ff00;
+    float: right;
+  } 
+</style>
+```
+
+```
+ <body>
+   <div class="container ">
+     <div class="box1"></div>
+     <div class="box2"></div>
+   </div>
+
+  <div class="container parent">
+    <div class="box1"></div>
+    <div class="box2"></div>
+  </div> 
+</body>
+```
+
+![Snip20191126_18](Snip20191126_18.png) 
+
+
+
+### 3.让父元素称为绝对定位元素 (position设置为 absolute 或者 fixed)
+
+> 父元素脱离了标准流
+>
+> 改变了盒子特性不推荐
+
+```
+position: absolute;
+// 或者
+position: fixed;
+```
+
+![Snip20191126_20](Snip20191126_20.png) 
+
+
+
+### 4. 修改父元素设置display属性
+
+为 `inline-block`  `inline-table` `table` `table-cell` `table-caption` 
+
+> 改变了父元素特性不推荐
+
+
+
+### 5. 给父元素 设置 overflow为 visible以外的值 (比如: hidden, auto, scroll)
+
+> 改变了父元素对内容溢出的默认行为, 不推荐
+
+ 
+
+
+
+### 6. CSS 属性- clear
+
+- clear 属性常用的取值 
+
+  > clear 属性一般用在非浮动元素上
+  >
+  > 可以让非浮动元素与浮动元素不层叠
+  
+- `left` 要求元素的顶部低于之前生成的所有**左浮** 动元素的底部
+  - `right` 要求元素的顶部低于之前生成的所有的**右浮** 动元素的底部
+  - `both` 要求元素的顶部低于之前生成的所有浮动元素的底部
+  - `none` 默认值无特殊要求
+  
+
+![Snip20191126_26](Snip20191126_26.png) 
+
+```
+  <style>
+  
+          .box1 {
+              width: 50px;
+              height: 50px;
+              float: left;
+              background-color: #ff0000;
+              margin-top: 10px;
+          }
+  
+          .box2 {
+              width: 100px;
+              height: 100px;
+              float: right;
+              background-color: #00ff00;
+              margin-top: 10px;
+          }
+          .box3 {
+              height: 50px;
+              background-color: #0000ff;
+              //clear: right;
+              //clear: left;
+              clear: both;
+          }
+  
+      </style>
+```
+
+```
+  <body>
+    <div class="box1"></div>
+    <div class="box2"></div>
+    <div class="box3"></div>
+  </body>
+```
+
+
+
+### 7. 在父元素最后增加一个空的块级子元素, 并且让他设置`clear:both ` 
+
+> 缺点
+>
+> - 会增加很多无意义的空标签, 维护起来麻烦
+> - 违反了结构与样式分离的原则 (不推荐)
+
+
+
+### 8.在父元素的最后增加一个 `br` 标签
+
+> 会增加很多无意义的空标签, 维护麻烦
+>
+> 违反了结构与样式分离的原则, 不推荐
+
+```
+<div class="container">
+  <div class="box1"></div>
+  <div class="box2"></div>
+  <!--br 有个clear 属性等价于CSS 中的clear 属性, 取值范围, left/ right/ all-->
+  <br clear="right">
+</div>
+```
+
+![Snip20191127_1](Snip20191127_1.png) 
+
+
+
+
+
+### 9. 终极方案 (伪元素 ::after)
+
+> 缺点, 低版本的IE浏览器是不支持伪元素的
+
+
+
+1. 不要带有副作用 (不要去修改元素的类型)
+2. 要有扩展性
+3. 纯CSS实现 (不违反结构与样式分离的原则)
+
+```
+<style>
+  .container {
+    border: 1px solid #000;
+  } 
+  // 清除浮动, 适用于流行浏览器
+  .container::after {
+    content: "";
+    display: block;
+    clear: both;
+  }
+
+  .box1 {
+    width: 50px;
+    height: 50px;
+    float: left;
+    background-color: #ff0000;
+  }
+
+  .box2 {
+    width: 100px;
+    height: 100px;
+    float: right;
+    background-color: #00ff00;
+  } 
+</style>
+```
+
+```
+<body>
+  <div class="container">
+  <div class="box1"></div>
+  <div class="box2"></div>
+  </div>
+  <strong>wo shi ce shi </strong>
+</body>
+```
+
+![Snip20191127_2](Snip20191127_2.png) 
+
+
+
+- 伪元素清除浮动, 适配旧浏览器要这么写
+
+  ```
+  .container::after {
+  	content: "";
+  	display: block;
+  	clear: both;
+  	
+  	height: 0;
+  	visibility:hidden
+  }
+  
+  .container {
+  	*zoom: 1;
+  }
+  ```
+
+
+
+
+
+
+
+
+
+
+
+### 10. 项目中清除浮动的正确姿势
+
+- 1. 将清除浮动的 CSS 代码单独的写到一个`.css` 文件中
+
+     ```
+     clear-fix.css 文件代码
+     
+     @charset "utf-8";
+     
+     .clear-fix::after {
+         content: "";
+         display: block;;
+         clear: both;
+     
+         height:0;  // 兼容旧浏览器
+         visibility: hidden; // 兼容旧浏览器
+     }
+     
+     .clear-fix {
+         *zoom:1; // 兼容旧浏览器
+     }
+     ```
+
+- 2. 在需要清除浮动的`.html`文件中引入清除浮动的css文件
+
+     ```
+     <link rel="stylesheet" href="./css/clear-fix.css"	
+     ```
+
+- 3. 在需要清除浮动的元素上 添加`clear-fix` 类即可
+
+     ```
+     // 添加 clear-fix 清除浮动, ok
+     <div class="container clear-fix">
+       <div class="box1 float-left"></div>
+       <div class="box2 float-right"></div>
+     </div>
+     <strong>wo shi ce shi </strong>
+     
+     ```
+
+     
+
+
+
+# 十九. 官方文档阅读
+
+
+
+## 1. 常用网站
+
+- 国内参考手册
+
+  http://css.doyoe.com      *这个更接近官方文档样式*  推荐
+
+  http://www.runoob.com/cssref/css-reference.html
+
+- 官网
+
+  https://www.w3.org
+
+  https://www.w3.org/TR/2011/REC-CSS2-20110607
+
+  https://www.w3.org/standards/techs/css
+
+  https://www.w3.org/TR/2011/REC-CSS2-20110607/propidx.html#q24.0
+
+  https://www.w3.org/standards/techs/css#w3c_all
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+## 2. CSS 属性的描述
+
+- CSS官方文档中对每一个CSS属性都有详细的描述![Snip20191127_3](Snip20191127_3.png)
+  - `Name` : 属性的名称
+  - `Value`: 属性可以设置哪些值
+  - `Initial`: 初始值 (默认值)
+  - `Applies to` : 使用于哪些元素
+    - `all elements` : 所有的元素
+    - `block-level elements`: 块级元素
+  - `Inherited`: 是否可以继承
+    - `yes` 可以继承
+    - `no` 不能继承
+  - `Percentages`: 是否可以使用百分比
+    - `N/A` : Not Applicable , 不使用, 不支持
+  - `Media` : 媒体组
+    - `visual`: 视觉
+  - `Computed Value` : 如何得出计算值
+  - `Animatable` : 是否可以动画
+
+
+
+## 3. CSS 属性的取值- 组合 (combinators)
+
+- 每个取值之间的关系, 有以下几种情况
+  - `并列` : 取值之间用空格隔开, 代表每个都必须出现, 顺序也不能改变 (参考font 属性)
+  - `|`: 只能出现一个 (参考 font-style属性)
+  - `||` : 出现1个或者多个, 顺序任意 (参考background属性)
+  - `&&` : 每个都必须出现, 顺序任意
+  - `[]` : 分组, 代表一个整体 (参考 text-decoration)
+- 优先级问题
+- 如果是`斜杠/`, `逗号`, 两种字符必须以字面形式显示, 参考 font-family, font 
+
+
+
+## 4. CSS 属性的取值- 出现次数 (multipliers)
+
+- 每个取值或者分组后面, 可以跟着以下符号, 用来指明取值可以出现的次数
+
+  - `型号(*)`: 出现0次或多次 (参考font-family 属性)
+
+  - `加号(+)`: 出现一次或多次 (参考content属性)
+
+  - `问号(?)`: 出现0或1次 (参考background-position/ font 属性)
+
+  - `花括号({A,B})`: 至少出现A次, 最多出现B次 (参考margin/ border-color 属性)
+
+  - `井号(#)`: 出现1次或多次, 每个值之间用`逗号`, 隔开
+
+  - `感叹号(!)`: 跟在分组后面, 表示这个分组至少要出现1个值(即使分组内规定所有值都是可选)
+
+    
+
+
+
+## 5. CSS 属性的取值- 类型 (types)
+
+- CSS 属性的取值, 有以下几种类型
+
+  - `关键字` 
+    - `red` `auto` `none` `left` `right` 等(没有任何引号, 大于小于号包住, 以字面形式显示)
+  - `基本数据类型`
+    - 格式为 `<数据类型>` , 比如: `<length>` `<number>` `<percentage>` `<color>` `<string>` `time` 等
+  - `跟特定属性相关的数据类型`
+    - 格式为 `<数据类型>`, 比如: `<margin-width>` `<border-width>` 等
+  - `引用其它属性的值`
+    - 格式为 `'属性名'` , 比如, `'font-size'` `'background-image'` 
+
+- **`<number>`** 
+
+  - 实数, 包括整数, 小数, 比如: 2.5  90
+
+    ```
+    div {
+    	line-height: 2.5; 
+    }
+    ```
+
+- **`<integer>`** 
+
+  - 整数, 比如10, 20 , -100
+
+    ```
+    div {
+    	z-index: 1;
+    }
+    ```
+
+- **`<length>`** 
+
+  - 代表长度, 一段距离, `<lenght>` 的值相当于`<number>` 后面跟一个长度单位
+
+    ```
+    h1 {
+    	width: 20px;
+    	height: 10.5em;
+    	margin: -20px;
+    }
+    ```
+
+  - 如果`<length>` 的值为0, 可以省略长度单位
+
+    ```
+    h1 {
+    	width: 0;
+    }
+    ```
+
+  - 常见的单位有2种
+
+    - 绝对单位 : `px` 
+    - 相对单位: `em` `rem` 
+
+- **`<length>` - 相对单位em rem** 
+
+  - `em` 
+
+    - `em` 的计算值, **相对于当前元素的font-size进行计算** 
+    - **em 例外情况** , 当`em` 用在`font-size` 属性上时, 相对于父元素的`font-size` 进行计算
+
+    ```
+    div {
+    	font-size: 40px;
+    	height: 2em; //80px
+    }
+    ```
+
+    ```
+    body {
+    	font-size: 40px;
+    }
+    
+    // body 是div的父元素
+    div {
+    	font-size: 2em; //80px
+    	height: 2em; // 160px
+    }
+    ```
+
+  - `rem` 
+
+    - `rem` 的计算值, 相对于根元素的`font-size` 进行计算
+    - 当`rem` 用在根元素的`font-size` 属性上时, 那就相对于根元素`font-size`的初始值计算
+
+    
+
+- **`<time>`**
+
+  - 表示时间, 相当于`<number>` 后面跟着一个时间单位
+    - `s` : 秒
+    - `ms`: 毫秒, 1秒 = 1000毫秒
+
+- **`<angle>`**
+
+  - 表示角度, 相当于`<number>` 后面跟着一个角度单位拟
+    - `deg`  degress, 度, 一个圆周是360度
+
+- **`<percentage>`**
+
+  - `<percentage>` 的写法是`number` 后面紧跟一个百分号 `%` 
+
+    ```
+    span {
+    	font-size: 150%;
+    }
+    ```
+
+    ```
+    div {
+    	font-size: 40px;
+    	line-height: 200%; // 80px 相对于当前元素的 font-size计算
+    }
+    ```
+
+  - 如何获取`<percentage>` 的计算值
+
+    - 可能相对于当前元素的某一属性值计算
+
+    - 可能相对于父元素的某一属性值计算
+
+    - 可能相对于格式上下文的某一属性值计算, 比如包含块的宽度
+
+      ```
+      body {
+      	font-size: 20px;
+      }
+      
+      // body 是div的父元素
+      div {
+      	font-size: 200%; // 40px 相对于福严肃的 font-size计算
+      }
+      ```
+
+      ```
+      div {
+      	width: 200px;
+      }
+      
+      span {
+      	display: inline-block;
+      	width: 50%; // 100px div的内容框是span的包含块
+      	height: 30px;
+      }
+      ```
+
+  
+
+  
+
+  
+
+- **`<string>`** 
+
+  - `<string>` 表示字符串
+
+  - 可以使用双引号或单引号扩住
+
+    ```
+    div::after {
+    	content: '尾部元素';
+    }
+    ```
+
+    
