--- a/001.md
+++ b/001.md
@@ -6291,4 +6291,116 @@ position: fixed;
     }
     ```
 
-    
+
+
+
+
+
+
+# 二十. HTML5 标签
+
+
+
+HTML5标签, 是HTML标签的第5代, 那么HTML5和以前的标签有什么区别呢? 
+
+HTML5标签和以前的标签的最大区别是新增了音 视频标签
+
+
+
+
+
+## 1. 视频播放标签
+
+### 1. 视频播放标签介绍 
+
+
+
+- 在html5中新增了一个视频标签 `video` 
+  
+  - 不是所有的浏览器都支持`video` 标签, `IE9+` 
+  
+- `video` 标签常用属性介绍
+  - `autoplay`:  如果出现该属性, 视频在就绪后马上播放
+  
+    >  经过测试, 现在要添加`muted=“muted”` 熟悉感才能自动播放
+  
+  - `controls`: 如果出现该属性, 则向用户显示空间, 比如播放按钮
+  
+  - `height`: 设置视频播放器的宽高
+  
+  - `width`: 设置视频播放器的宽度
+  
+  - `loop` : 如果出现该属性, 则当媒介文件完成播放后再次开始播放
+  
+  - `preload`: 如果出现该属性, 则视频在页面加载时进行加载, 并预备播放
+  
+    > 如果使用`autoplay` , 则忽略该属性
+    >
+    > `preload="auto"` 当页面加载后载入整个视频
+    >
+    > `preload="meta"` 当页面加载后只载入元数据
+    >
+    > `preload="none"` 当页面加载后, 不载入视频
+  
+  - `src` : 要播放的视频url
+  
+  ```
+  <video src="video/sb1.webm" controls="controls" loop="loop" preload="auto"  ></video>
+  ```
+  
+  
+
+### 2.  视频标签的兼容写法
+
+
+
+
+
+由于视频标签对各大浏览器厂商来说是非常重要的, 因此各大厂商支持的视频格式是不一样的
+
+
+
+当前,video 标签支持3种视频格式:
+
+- `Ogg`: 带有`Theora` 视频编码和`Vorbis` 音频编码的`Ogg` 文件
+- `MPEG`:  带有H.264视频编码和AAC音频编码的MPEG4文件, 其实就是我们熟知的MP4文件
+- `webM`: 带有vp8视频编码和Vorbis 音频编码的webM 文件 
+
+没有哪一款浏览器是同时支持上面三种视频文件的. 
+
+
+
+- 兼容性写法
+
+  ```
+  <video width="320" height="240" controls >
+      <source src="./video/sb2.ogg" type="video/ogg">
+      <source src="./video/sb2.mp4" type="video/mp4">
+      <source src="./video/sb2.webm" type="video/webm">
+      // 下面这句内容是不支持播放时才会显示的提示文字
+      你的浏览器不只是视频播放
+  </video>
+  ```
+
+  
+
+
+
+
+
+## 2. 音频播放标签
+
+
+
+### 1. 音频播放标签介绍
+
+>  使用方法和视频的使用方法一样
+
+
+
+
+
+
+
+
+
